--- a/TFC/src/main/resources/templates/fragments/footer.html
+++ b/TFC/src/main/resources/templates/fragments/footer.html
@@ -2,6 +2,7 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="/webjars/font-awesome/5.15.4/css/all.min.css" />
 	<link rel="stylesheet" href="/css/footer.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -11,14 +12,14 @@
 </head>
 <body>
 <footer class="row d-flex">
-    <div class="col-3 d-flex flex-column align-items-center">
+    <div class="col-3 d-flex flex-column align-items-center info">
         <h3>Compañía</h3>
         <hr></hr>
         <span>Sobre nosotros</span>
         <span>Nuestros servicios</span>
         <span>Políticas de privacidad</span>
     </div>
-    <div class="col-3 d-flex flex-column align-items-center">
+    <div class="col-3 d-flex flex-column align-items-center info">
         <h3>Ayuda</h3>
         <hr></hr>
         <span>Preguntas frecuentes</span>
@@ -27,7 +28,7 @@
         <span>Estado del pedido</span>
         <span>Opciones de pago</span>
     </div>
-    <div class="col-3 d-flex flex-column align-items-center">
+    <div class="col-3 d-flex flex-column align-items-center info">
         <h3>Tienda Online</h3>
         <hr></hr>
         <span>Categoria1</span>
