Vista de SingUp y solución de pequeños errores

--- a/TFC/src/main/resources/templates/home.html
+++ b/TFC/src/main/resources/templates/home.html
@@ -4,7 +4,10 @@
 <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/webjars/font-awesome/5.15.4/css/all.min.css" />
+	<link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/Header.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -71,7 +74,7 @@
 	</main>
 	
 	<!-- |footer| 				   	 			  |footer|	  -->
-    <header th:insert="fragments/footer"></header>
+    <footer class="row d-flex" th:insert="fragments/footer"></footer>
     <!-- ====================================================== -->
     
 </body>
