Creación Log In

--- a/TFC/src/main/resources/templates/logIn.html
+++ b/TFC/src/main/resources/templates/logIn.html
@@ -20,16 +20,7 @@
     <!-- ====================================================== -->
     <main>
         <form class="col">
-            <h2>Registrar</h2>
-            <div class="row campo">
-                <input type="text" id="nombre" name="nombre" placeholder="Nombre">
-            </div>
-            <div class="row campo">
-                <input type="text" id="apellidos" name="apellidos" placeholder="Apellidos">
-            </div>
-            <div class="row campo">
-                <input type="email" id="email" name="email" placeholder="Email">
-            </div>
+            <h2>Log In</h2>
             <div class="row campo">
                 <input type="text" id="user" name="user" placeholder="Username">
             </div>
@@ -37,7 +28,7 @@
                 <input type="password" id="password" name="password" placeholder="Password">
             </div>
             <div class="row divbtn d-flex justify-content-center">
-                <button class="btn2" type="submit" id="submit" name="submit">Registrar</button>
+                <button class="btn2" type="submit" id="submit" name="submit">Log In</button>
             </div>
         </form>
     </main>
