--- a/TFC/src/main/resources/templates/singUp.html
+++ b/TFC/src/main/resources/templates/singUp.html
@@ -12,7 +12,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <title>Sing Up</title>
+    <link rel="icon" type="img/png" href="/img/header/dibujo.png" class="logo">
+    <title>Coruña Automoción | Sing Up</title>
 </head>
 <body>
 	<!-- |header| 				   	 			  |header|	  -->
