--- a/TFC/src/main/resources/templates/home.html
+++ b/TFC/src/main/resources/templates/home.html
@@ -34,12 +34,154 @@
             <div class="col-6"></div>
         </div>
 
-        <section>
-            <div class="marcas">
-                <h2 class="text-center">Gran variedad de marcas disponibles</h2>
-                <div class="marcasimg"></div>
+        <section class="row destacados">
+        <h2 class="text-center">Coches Destacados</h2>
+            <div class="container-fluid d-flex justify-content-center">
+                <div class="row mt-5">
+                    <div class="col-sm-4 d-flex justify-content-around">
+                        <div class="card">
+                            <h3 class="text-muted text-center">Porsche 911</h3>
+                            <div class="imgCar d-flex">
+                                <img src="/Img/home/porsche-model.png" class="card-img-top align-self-center justify-self-center">
+                            </div>
+                            <div class="card-body pt-0 px-0">
+                                <div class="d-flex flex-row justify-content-between mb-0 px-3">
+                                    <small class="text-muted mt-1">STARTING AT</small>
+                                    <h6>141.239 €</h6>
+                                </div>
+                                <hr class="mt-2 mx-3">
+                                <div class="d-flex flex-row justify-content-between px-3 pb-4">
+                                    <div class="d-flex flex-column">
+                                        <span class="text-muted">Fuel Efficiency</span>
+                                        <small class="text-muted">L/100KM&ast;</small></div>
+                                    <div class="d-flex flex-column">
+                                        <h5 class="mb-0">10.8/10.3</h5>
+                                        <small class="text-muted text-right">(city/Hwy)</small>
+                                    </div>
+                                </div>
+                                <div class="d-flex flex-row justify-content-between p-3 mid">
+                                    <div class="d-flex flex-column">
+                                        <small class="text-muted mb-1">ENGINE</small>
+                                        <div class="d-flex flex-row">
+                                            <img src="/Img/home/motor.png" class="iconoInfo">
+                                            <div class="d-flex flex-column ml-1">
+                                                <small class="ghj"> Bóxer 6 cilindros</small><small class="ghj">Doble Turbo</small></div>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex flex-column">
+                                        <small class="text-muted mb-2">HORSEPOWER</small>
+                                        <div class="d-flex flex-row">
+                                            <img src="/Img/home/hp.png" class="iconoInfo">
+                                            <h6 class="ml-1">385 hp</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mx-3 mt-3 mb-2 d-flex justify-content-center">
+                                    <button class="boton0"><small>BUILD & PRICE</small></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4 d-flex justify-content-around">
+                        <div class="card">
+                            <h3 class="text-muted text-center">Audi R8</h3>
+                            <div class="imgCar d-flex">
+                                <img src="/Img/home/r8(2).png" class="card-img-top align-self-center justify-self-center">
+                            </div>
+                            <div class="card-body pt-0 px-0">
+                                <div class="d-flex flex-row justify-content-between mb-0 px-3">
+                                    <small class="text-muted mt-1">STARTING AT</small>
+                                    <h6>181.850 €</h6>
+                                </div>
+                                <hr class="mt-2 mx-3">
+                                <div class="d-flex flex-row justify-content-between px-3 pb-4">
+                                    <div class="d-flex flex-column">
+                                        <span class="text-muted">Fuel Efficiency</span>
+                                        <small class="text-muted">L/100KM&ast;</small>
+                                    </div>
+                                    <div class="d-flex flex-column">
+                                        <h5 class="mb-0">13,1/12,9</h5>
+                                        <small class="text-muted text-right">(city/Hwy)</small>
+                                    </div>
+                                </div>
+                                <div class="d-flex flex-row justify-content-between p-3 mid">
+                                    <div class="d-flex flex-column">
+                                        <small class="text-muted mb-1">ENGINE</small>
+                                        <div class="d-flex flex-row">
+                                            <img src="/Img/home/motor.png" class="iconoInfo">
+                                            <div class="d-flex flex-column ml-1">
+                                                <small class="ghj">5.2 V10</small>
+                                                <small class="ghj">Atmosférico</small>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex flex-column">
+                                        <small class="text-muted mb-2">HORSEPOWER</small>
+                                        <div class="d-flex flex-row">
+                                            <img src="/Img/home/hp.png" class="iconoInfo">
+                                            <h6 class="ml-1">570 hp</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mx-3 mt-3 mb-2  d-flex justify-content-center">
+                                    <button class="boton0"><small>BUILD & PRICE</small></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+
+
+                    <div class="col-sm-4 d-flex justify-content-around">
+                        <div class="card">
+                            <h3 class="text-muted text-center">LaFerrari</h3>
+                            <div class="imgCar d-flex">
+                                <img src="/Img/home/ferrari.png" class="card-img-top align-self-center justify-self-center">
+                            </div>
+                            <div class="card-body pt-0 px-0">
+                                <div class="d-flex flex-row justify-content-between mb-0 px-3">
+                                    <small class="text-muted mt-1">STARTING AT</small>
+                                    <h6>1.300.000 €</h6>
+                                </div>
+                                <hr class="mt-2 mx-3">
+                                <div class="d-flex flex-row justify-content-between px-3 pb-4">
+                                    <div class="d-flex flex-column">
+                                        <span class="text-muted">Fuel Efficiency</span>
+                                        <small class="text-muted">L/100KM&ast;</small>
+                                    </div>
+                                    <div class="d-flex flex-column">
+                                        <h5 class="mb-0">19,0/14,0</h5>
+                                        <small class="text-muted text-right">(city/Hwy)</small>
+                                    </div>
+                                </div>
+                                <div class="d-flex flex-row justify-content-between p-3 mid">
+                                    <div class="d-flex flex-column">
+                                        <small class="text-muted mb-1">ENGINE</small>
+                                        <div class="d-flex flex-row">
+                                            <img src="/Img/home/motor.png" class="iconoInfo">
+                                            <div class="d-flex flex-column ml-1">
+                                                <small class="ghj">6.3 V12</small>
+                                                <small class="ghj">Atmosférico</small>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex flex-column">
+                                        <small class="text-muted mb-2">HORSEPOWER</small>
+                                        <div class="d-flex flex-row">
+                                            <img src="/Img/home/hp.png" class="iconoInfo">
+                                            <h6 class="ml-1">960</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mx-3 mt-3 mb-2  d-flex justify-content-center">
+                                    <button class="boton0"><small>BUILD & PRICE</small></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            
         </section>
 
         <section>
