--- a/TFC/src/main/resources/templates/fragments/header.html
+++ b/TFC/src/main/resources/templates/fragments/header.html
@@ -6,8 +6,8 @@
    				Tienda
     		</a>
     		<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-    			<a class="dropdown-item" href="#">Coches</a>
-    			<a class="dropdown-item" href="#">Productos</a>
+    			<a class="dropdown-item" th:href="@{/coches}">Coches</a>
+    			<a class="dropdown-item" th:href="@{/productos}">Productos</a>
     		</div>
 		</li>
     	<li><a th:href="@{/}"><img src="/img/header/dibujo.png" class="logo"></a></li>
