--- a/TFC/src/main/resources/templates/fragments/header.html
+++ b/TFC/src/main/resources/templates/fragments/header.html
@@ -17,7 +17,7 @@
    				Entrar
     		</a>
     		<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-    			<a class="dropdown-item" href="/log">Log In</a>
+    			<a class="dropdown-item" href="/login">Log In</a>
     			<a class="dropdown-item" href="/singup">Registar</a>
     		</div>
 		</li>
