--- a/TFC/src/main/resources/static/css/contacto.css
+++ b/TFC/src/main/resources/static/css/contacto.css
@@ -11,6 +11,9 @@ section {
 	width: 80%;
 	display: flex;
 	align-items: center;
+	margin-top:10vw;
+	margin-bottom: 10vw;
+	border-radius: 10px;
 }
 
 .formulario {
@@ -65,7 +68,7 @@ h2 {
 
 .info div{
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
 	align-content: center;
 	flex-direction: column;
 }
@@ -79,3 +82,15 @@ hr {
     width: 40%;
     height: 0.25vw !important;
 }
+
+h3 {
+	font-size: 2vw !important;
+}
+
+p {
+	font-size: 1vw !important;
+}
+
+
+
+
