Añadidos mas iconos y solucionado error de security

--- a/TFC/src/main/resources/templates/fragments/footer.html
+++ b/TFC/src/main/resources/templates/fragments/footer.html
@@ -21,7 +21,7 @@
         <span>Categoria2</span>
         <span>Categoria3</span>
     </div>
-    <div class="col-3 d-flex flex-column align-items-center rrss">
+    <div class="col-3 d-flex flex-column align-items-center info rrss">
         <h3>Síguenos</h3>
         <hr></hr>
         <span><i class="fab fa-facebook-f"></i></span>
