--- a/TFC/src/main/resources/static/css/contacto.css
+++ b/TFC/src/main/resources/static/css/contacto.css
@@ -40,6 +40,10 @@ h2 {
 	border: none;
 	border-radius: 5px;
 	margin-bottom:2vw;
+	font-size: 1.5vw;
+	font-weight: 450;
+	text-indent: 10%;
+	
 }
 
 .boton {
