--- a/TFC/src/main/resources/templates/logIn.html
+++ b/TFC/src/main/resources/templates/logIn.html
@@ -19,10 +19,10 @@
     <header th:insert="fragments/header"></header>
     <!-- ====================================================== -->
     <main>
-        <form class="col" th:action="@{/login}">
+        <form class="col" th:action="@{/login}" method="POST">
             <h2>Log In</h2>
             <div class="row campo">
-                <input type="text" id="user" name="user" placeholder="Username" >
+                <input type="text" id="username" name="username" placeholder="Username" >
             </div>
             <div class="row campo">
                 <input type="password" id="password" name="password" placeholder="Password">
@@ -30,6 +30,15 @@
             <div class="row divbtn d-flex justify-content-center">
                 <button class="btn2" type="submit" id="submit" name="submit">Log In</button>
             </div>
+            
+            
+            
+            <div th:if="${errorMessage}" class="error-message">
+        <p th:text="${errorMessage}"></p>
+    </div>
+    
+    
+    
         </form>
     </main>
     <!-- |footer| 				   	 	         |footer|	  -->
