--- a/TFC/src/main/resources/templates/singUp.html
+++ b/TFC/src/main/resources/templates/singUp.html
@@ -20,22 +20,22 @@
     <header th:insert="fragments/header"></header>
     <!-- ====================================================== -->
     <main>
-        <form class="col" th:action="@{/singUp}">
+        <form class="col" method="POST" th:action="@{/saveuser}" th:object="${clientes}">
             <h2>Registrar</h2>
             <div class="row campo">
-                <input type="text" id="nombre" name="nombre" placeholder="Nombre">
+                <input type="text" id="nombre" name="nombre" placeholder="Nombre" th:field="*{nombre}">
             </div>
             <div class="row campo">
-                <input type="text" id="apellidos" name="apellidos" placeholder="Apellidos">
+                <input type="text" id="apellidos" name="apellidos" placeholder="Apellidos" th:field="*{apellido}">
             </div>
             <div class="row campo">
-                <input type="email" id="email" name="email" placeholder="Email">
+                <input type="email" id="email" name="email" placeholder="Email" th:field="*{email}">
             </div>
             <div class="row campo">
-                <input type="text" id="user" name="user" placeholder="Username">
+                <input type="text" id="user" name="user" placeholder="Username" th:field="*{usuario}">
             </div>
             <div class="row campo">
-                <input type="password" id="password" name="password" placeholder="Password">
+                <input type="password" id="password" name="password" placeholder="Password" th:field="*{contraseña}">
             </div>
             <div class="row divbtn d-flex justify-content-center">
                 <button class="btn2" type="submit" id="submit" name="submit">Registrar</button>
