--- a/TFC/src/main/resources/templates/singUp.html
+++ b/TFC/src/main/resources/templates/singUp.html
@@ -35,7 +35,7 @@
                 <input type="text" id="user" name="user" placeholder="Username" th:field="*{usuario}">
             </div>
             <div class="row campo">
-                <input type="password" id="password" name="password" placeholder="Password" th:field="*{contraseña}">
+                <input type="password" id="password" name="password" placeholder="Password" th:field="*{password}">
             </div>
             <div class="row divbtn d-flex justify-content-center">
                 <button class="btn2" type="submit" id="submit" name="submit">Registrar</button>
