Arreglado problema con iconos font awesome del footer

--- a/TFC/src/main/resources/static/css/coches.css
+++ b/TFC/src/main/resources/static/css/coches.css
@@ -3,7 +3,7 @@
 main {
     background-color: #28242c;
     color: white;
-    align-text: center;
+    text-align: center;
     padding-top: 10%;
     padding-bottom: 10%;
 }
