--- a/TFC/src/main/resources/templates/detalle.html
+++ b/TFC/src/main/resources/templates/detalle.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/c777ed83a5.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/coches.css">
     <link rel="stylesheet" href="/css/Header.css">
