--- a/TFC/src/main/resources/templates/home.html
+++ b/TFC/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/webjars/font-awesome/5.15.4/css/all.min.css" />
+	<script src="https://kit.fontawesome.com/c777ed83a5.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="/css/Header.css">
@@ -63,7 +63,7 @@
                                     <div class="d-flex flex-column">
                                         <small class="text-muted mb-1">ENGINE</small>
                                         <div class="d-flex flex-row">
-                                            <img src="/img/home/motor.png" class="iconoInfo">
+                                            <img src="/img/icons/Producto/Motor.png" class="iconoInfo">
                                             <div class="d-flex flex-column ml-1">
                                                 <small class="ghj"> Bóxer 6 cilindros</small><small class="ghj">Doble Turbo</small></div>
                                         </div>
@@ -71,7 +71,7 @@
                                     <div class="d-flex flex-column">
                                         <small class="text-muted mb-2">HORSEPOWER</small>
                                         <div class="d-flex flex-row">
-                                            <img src="/img/home/hp.png" class="iconoInfo">
+                                            <img src="/img/icons/Producto/Velocimetro.png" class="iconoInfo">
                                             <h6 class="ml-1">385 hp</h6>
                                         </div>
                                     </div>
@@ -109,7 +109,7 @@
                                     <div class="d-flex flex-column">
                                         <small class="text-muted mb-1">ENGINE</small>
                                         <div class="d-flex flex-row">
-                                            <img src="/img/home/motor.png" class="iconoInfo">
+                                            <img src="/img/icons/Producto/Motor.png" class="iconoInfo">
                                             <div class="d-flex flex-column ml-1">
                                                 <small class="ghj">5.2 V10</small>
                                                 <small class="ghj">Atmosférico</small>
@@ -119,7 +119,7 @@
                                     <div class="d-flex flex-column">
                                         <small class="text-muted mb-2">HORSEPOWER</small>
                                         <div class="d-flex flex-row">
-                                            <img src="/img/home/hp.png" class="iconoInfo">
+                                            <img src="/img/icons/Producto/Velocimetro.png" class="iconoInfo">
                                             <h6 class="ml-1">570 hp</h6>
                                         </div>
                                     </div>
@@ -159,7 +159,7 @@
                                     <div class="d-flex flex-column">
                                         <small class="text-muted mb-1">ENGINE</small>
                                         <div class="d-flex flex-row">
-                                            <img src="/img/home/motor.png" class="iconoInfo">
+                                            <img src="/img/icons/Producto/Motor.png" class="iconoInfo">
                                             <div class="d-flex flex-column ml-1">
                                                 <small class="ghj">6.3 V12</small>
                                                 <small class="ghj">Atmosférico</small>
@@ -169,7 +169,7 @@
                                     <div class="d-flex flex-column">
                                         <small class="text-muted mb-2">HORSEPOWER</small>
                                         <div class="d-flex flex-row">
-                                            <img src="/img/home/hp.png" class="iconoInfo">
+                                            <img src="/img/icons/Producto/Velocimetro.png" class="iconoInfo">
                                             <h6 class="ml-1">960</h6>
                                         </div>
                                     </div>
