--- a/TFC/src/main/resources/static/css/coches.css
+++ b/TFC/src/main/resources/static/css/coches.css
@@ -4,8 +4,8 @@ main {
     background-color: #28242c;
     color: white;
     text-align: center;
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
 }
 
 .boton2 {
@@ -46,7 +46,8 @@ article {
 	border: solid 2.5px white;
 	border-radius: 15px;
 	padding: 5%;
-
+	margin-top: 7.5%;
+	margin-bottom: 7.5%;
 }
 
 section {
@@ -54,7 +55,10 @@ section {
 	padding-left: 20% !important;
 }
 
-
+.imgCoche{
+	width: 75%;
+	border-radius: 15px;
+}
 
 
 
