--- a/TFC/src/main/resources/static/css/header.css
+++ b/TFC/src/main/resources/static/css/header.css
@@ -7,13 +7,11 @@ header {
     display: flex;
     padding-top: 2.5%;
     align-items: center;
+    justify-content: space-around;
 }
 
-.nav li{
-    display: flex;
-    justify-content: center;
-    padding-bottom: 2%;
-    width: 20%;
+.nav li{    
+	padding-bottom: 2%;
 }
 
 .logo {
@@ -27,7 +25,7 @@ header {
 
 
 .nav a:hover{ 
-	color:white;
+	color: rgb(255, 0, 100);
 	cursor: pointer;
 	text-decoration: none;
 	}
@@ -39,8 +37,22 @@ header {
 	background-color: #28242c !important;
 }
 	
+.boton0:hover {
+	color: white !important;
+}
 	
-	
-	
+.botonNav {
+    background: rgb(255, 0, 100);
+    border-radius: 999px;
+    box-shadow: rgb(255, 0, 100) 0 10px 20px -10px;
+    color: #FFFFFF;
+    font-size: 1.5vw;
+    font-weight: 700;
+    line-height: 2vw;
+    opacity: 1;
+    padding: 1vw 2vw;
+    border: 0;
+    margin-bottom:7.5%;
+}	
 	
 	
