--- a/TFC/src/main/resources/templates/coches/detalle.html
+++ b/TFC/src/main/resources/templates/coches/detalle.html
@@ -27,28 +27,70 @@
         		<div class="row">
         			<h3 th:text="${c.marca}"></h3>
         		</div>
-        		<div class="row">
+        		
+        		
+        		<div class="row">	<!--  1º Fila  -->
         			<div class="col"> <!--  Motor  -->
 						<div class="row">
 							<img src="/img/icons/Producto/Motor.png">
 						</div>
 						<div class="row">
-							<h3 th:text="${c.motor}"></h3>
+							<h3 class="row" th:text="${c.motor}"></h3>
+							<h3 class="row" th:text="${c.propulsion}"></h3>
 						</div>
 					</div>
-        			<div class="col">
-						
+					
+        			<div class="col"> <!--  Potencia  -->
+						<div class="row">
+							<img src="/img/icons/Producto/Velocimetro.png">
+						</div>
+						<div class="row">
+							<h3 class="row" th:text="${c.potencia}"></h3>
+						</div>
 					</div>
-        			<div class="col">
-						
+					
+        			<div class="col"> <!--  Cambio -->
+						<div class="row">
+							<img src="/img/icons/Producto/Cambio.png">
+						</div>
+						<div class="row">
+							<h3 class="row" th:text="${c.cambio}"></h3>
+						</div>
 					</div>
-        		</div>
-        		<div class="row">
-        			
-        		</div>
-        		<div class="row">
-        			
-        		</div>
+        		</div>  <!--  Fin 1º Fila  -->
+        		
+        		
+        		<div class="row">	<!--  2º Fila  -->
+        			<div class="col"> <!--  Traccion  -->
+						<div class="row">
+							<img src="/img/icons/Producto/Traccion.png">
+						</div>
+						<div class="row">
+							<h3 class="row" th:text="${c.traccion}"></h3>
+						</div>
+					</div>
+					
+        			<div class="col"> <!--  Combustible  -->
+						<div class="row">
+							<img src="/img/icons/Producto/Combustible.png">
+						</div>
+						<div class="row">
+							<h3 class="row" th:text="${c.combustible}"></h3>
+						</div>
+					</div>
+					
+        			<div class="col"> <!--  Consumo -->
+						<div class="row">
+							<img src="/img/icons/Producto/Combustible.png">
+						</div>
+						<div class="row">
+							<h3 class="row" th:text="${c.consumoCiudad}"></h3>
+							<h3 class="row" th:text="${c.consumoAutopista}"></h3>
+						</div>
+					</div>
+        		</div>  <!--  Fin 2º Fila  -->
+        		
+        		
         	</div>
        	</section>
     </main>
