--- a/TFC/src/main/resources/templates/coches/detalle.html
+++ b/TFC/src/main/resources/templates/coches/detalle.html
@@ -25,7 +25,7 @@
         			<img th:src="${c.img}" class="imgDetalle">
         		</div>
         		<div class="row">
-        			<h3 th:text="${c.marca}"></h3>
+        			<h3 th:text="${c.marca} + ${c.precio}"></h3>
         		</div>
         		
         		
