--- a/TFC/src/main/resources/static/css/coches.css
+++ b/TFC/src/main/resources/static/css/coches.css
@@ -6,40 +6,7 @@ main {
     text-align: center;
     padding-top: 2.5%;
     padding-bottom: 2.5%;
-}
-
-.boton2 {
-    background: rgb(255, 0, 100);
-    border-radius: 999px;
-    box-shadow: rgb(255, 0, 100) 0 10px 20px -10px;
-    color: #FFFFFF;
-    font-size: 1.5vw;
-    font-weight: 700;
-    line-height: 24px;
-    opacity: 1;
-    padding: 1vw 2vw;
-    border: 0;
-    margin-bottom:7.5%;
-    margin-top:10%;
-    display: flex;
-    justify-content: center;
-    margin: 2vw;
-}
-
-a {
-    text-decoration:none;
-}
-
-.prestaciones div {
-	padding-top: 2.5vw;
-	padding-bottom: 2.5vw;
-}
-
-
-.botones div{
-	display: flex;
-	justify-content: center;
-	align-content: center;
+    
 }
 
 article {
@@ -60,6 +27,43 @@ section {
 	border-radius: 15px;
 }
 
+.prestaciones div {
+	padding-top: 2.5vw;
+	padding-bottom: 2.5vw;
+}
 
+
+.botones div{
+	display: flex;
+	justify-content: center;
+	align-content: center;
+}
+
+/* Posicionamiento de los contenedores principales + bordes */
+
+
+.boton2 {
+    background: rgb(255, 0, 100);
+    border-radius: 999px;
+    box-shadow: rgb(255, 0, 100) 0 10px 20px -10px;
+    color: #FFFFFF;
+    font-size: 1.5vw;
+    font-weight: 700;
+    line-height: 24px;
+    opacity: 1;
+    padding: 1vw 2vw;
+    border: 0;
+    margin-bottom:7.5%;
+    margin-top:10%;
+    display: flex;
+    justify-content: center;
+    margin: 2vw;
+}
+
+a {
+    text-decoration:none !important;
+}
+
+/* Estilos de los botones de Comentarios, Compra y Detalle */
 
 
