--- a/TFC/src/main/resources/templates/fragments/header.html
+++ b/TFC/src/main/resources/templates/fragments/header.html
@@ -10,7 +10,7 @@
     			<a class="dropdown-item" th:href="@{/productos}">Productos</a>
     		</div>
 		</li>
-    	<li><a th:href="@{/}"><img src="/img/header/dibujo.png" class="logo"></a></li>
+    	<li><a th:href="@{/}"><img src="/img/header/dibujo.png" class="logo" alt="logo"></a></li>
     	<li><a th:href="@{/contacto}">Contacto</a></li>
        	<li class="nav-item dropdown" sec:authorize="isAnonymous()">
     		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
