--- a/TFC/src/main/resources/templates/home.html
+++ b/TFC/src/main/resources/templates/home.html
@@ -42,7 +42,7 @@
                         <div class="card">
                             <h3 class="text-muted text-center">Porsche 911</h3>
                             <div class="imgCar d-flex">
-                                <img src="/img/home/porsche-model.png" class="card-img-top align-self-center justify-self-center">
+                                <img src="/img/home/porsche-model.png" class="card-img-top align-self-center justify-self-center" alt="img Coche">
                             </div>
                             <div class="card-body pt-0 px-0">
                                 <div class="d-flex flex-row justify-content-between mb-0 px-3">
@@ -63,7 +63,7 @@
                                     <div class="d-flex flex-column">
                                         <small class="text-muted mb-1">ENGINE</small>
                                         <div class="d-flex flex-row">
-                                            <img src="/img/icons/Producto/Motor.png" class="iconoInfo">
+                                            <img src="/img/icons/Producto/Motor.png" class="iconoInfo" alt="icono">
                                             <div class="d-flex flex-column ml-1">
                                                 <small class="ghj"> Bóxer 6 cilindros</small><small class="ghj">Doble Turbo</small></div>
                                         </div>
@@ -71,7 +71,7 @@
                                     <div class="d-flex flex-column">
                                         <small class="text-muted mb-2">HORSEPOWER</small>
                                         <div class="d-flex flex-row">
-                                            <img src="/img/icons/Producto/Velocimetro.png" class="iconoInfo">
+                                            <img src="/img/icons/Producto/Velocimetro.png" class="iconoInfo" alt="icono">
                                             <h6 class="ml-1">385 hp</h6>
                                         </div>
                                     </div>
@@ -86,8 +86,8 @@
                     <div class="col-sm-4 d-flex justify-content-around">
                         <div class="card">
                             <h3 class="text-muted text-center">Audi R8</h3>
-                            <div class="imgCar d-flex">
-                                <img src="/img/home/r8(2).png" class="card-img-top align-self-center justify-self-center">
+                            <div class="imgCar d-flex" >
+                                <img src="/img/home/r8(2).png" class="card-img-top align-self-center justify-self-center" alt="img Coche">
                             </div>
                             <div class="card-body pt-0 px-0">
                                 <div class="d-flex flex-row justify-content-between mb-0 px-3">
@@ -109,7 +109,7 @@
                                     <div class="d-flex flex-column">
                                         <small class="text-muted mb-1">ENGINE</small>
                                         <div class="d-flex flex-row">
-                                            <img src="/img/icons/Producto/Motor.png" class="iconoInfo">
+                                            <img src="/img/icons/Producto/Motor.png" class="iconoInfo" alt="icono">
                                             <div class="d-flex flex-column ml-1">
                                                 <small class="ghj">5.2 V10</small>
                                                 <small class="ghj">Atmosférico</small>
@@ -119,7 +119,7 @@
                                     <div class="d-flex flex-column">
                                         <small class="text-muted mb-2">HORSEPOWER</small>
                                         <div class="d-flex flex-row">
-                                            <img src="/img/icons/Producto/Velocimetro.png" class="iconoInfo">
+                                            <img src="/img/icons/Producto/Velocimetro.png" class="iconoInfo" alt="icono">
                                             <h6 class="ml-1">570 hp</h6>
                                         </div>
                                     </div>
@@ -137,7 +137,7 @@
                         <div class="card">
                             <h3 class="text-muted text-center">LaFerrari</h3>
                             <div class="imgCar d-flex">
-                                <img src="/img/home/ferrari.png" class="card-img-top align-self-center justify-self-center">
+                                <img src="/img/home/ferrari.png" class="card-img-top align-self-center justify-self-center" alt="img Coche">
                             </div>
                             <div class="card-body pt-0 px-0">
                                 <div class="d-flex flex-row justify-content-between mb-0 px-3">
@@ -159,7 +159,7 @@
                                     <div class="d-flex flex-column">
                                         <small class="text-muted mb-1">ENGINE</small>
                                         <div class="d-flex flex-row">
-                                            <img src="/img/icons/Producto/Motor.png" class="iconoInfo">
+                                            <img src="/img/icons/Producto/Motor.png" class="iconoInfo" alt="icono">
                                             <div class="d-flex flex-column ml-1">
                                                 <small class="ghj">6.3 V12</small>
                                                 <small class="ghj">Atmosférico</small>
@@ -169,7 +169,7 @@
                                     <div class="d-flex flex-column">
                                         <small class="text-muted mb-2">HORSEPOWER</small>
                                         <div class="d-flex flex-row">
-                                            <img src="/img/icons/Producto/Velocimetro.png" class="iconoInfo">
+                                            <img src="/img/icons/Producto/Velocimetro.png" class="iconoInfo" alt="icono">
                                             <h6 class="ml-1">960</h6>
                                         </div>
                                     </div>
@@ -185,7 +185,7 @@
         </section>
 
         <section>
-            <hr class="separacion"></hr>
+            <hr class="separacion">
             <div>
                 <div class="tasacion row">
                     <div class="col-6 text-center">
@@ -197,7 +197,7 @@
                         
                     </div>
                 </div>
-                <hr class="separacion"></hr>
+                <hr class="separacion">
             </div>
             <div>
                 <div class="tasacion row">
