--- a/TFC/src/main/resources/static/css/admin.css
+++ b/TFC/src/main/resources/static/css/admin.css
@@ -8,6 +8,10 @@ section {
     padding-bottom: 10vw;
 }
 
+h1 {
+	font-size: 4vw !important;
+}
+
 .col-2 {
     display: flex;
     flex-direction: column;
@@ -20,8 +24,8 @@ section {
 }
 
 .col-10 {
-    padding-left: 0px !important;
-    padding-right: 0px !important;
+    padding-left: 5% !important;
+    padding-right: 5% !important;
 }
 
 .boton-lista {
