--- a/TFC/src/main/resources/templates/admin/adminProductos.html
+++ b/TFC/src/main/resources/templates/admin/adminProductos.html
@@ -24,26 +24,28 @@
     			<ul class="col-2 d-flex" th:insert="fragments/adminNav"></ul>
     			<!-- ======================================= -->
                 <div class="col-10">
-                    <h1 class="text-center">USUARIOS</h1>
+                    <h1 class="text-center">Productos</h1>
                     <table>
                         <thead>
                             <tr>
                                 <th>ID</th>
                                 <th>Nombre</th>
-                                <th>Apellidos</th>
-                                <th>Email</th>
-                                <th>Usuario</th>
-                                <th>Estatus</th>
+                                <th>Marca</th>
+                                <th>Info</th>
+                                <th>Precio</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr th:each="u: ${c}">
-                                <td th:text="${u.id}"></td>
-                                <td th:text="${u.nombre}"></td>
-                                <td th:text="${u.apellido}"></td>
-                                <td th:text="${u.email}"></td>
-                                <td th:text="${u.usuario}"></td>
-                                <td th:text="${u.estatus}"></td>
+                            <tr th:each="p: ${p}">
+                                <td th:text="${p.id}"></td>
+                                <td th:text="${p.nombre}"></td>
+                                <td th:text="${p.marca}"></td>
+                                <td th:text="${p.info}"></td>
+                                <td th:text="${#numbers.formatDecimal(p.precio, 0, 'POINT', 0, 'COMMA')} + ' €'"></td> 
+                                <td class="opciones">
+                                    <a th:href="@{/admin/productos/edit/{id} (id=${p.id}) }" class="boton-admin" role="button" title="Editar el registro."><i class="fas fa-pencil-alt" aria-hidden="true"></i></a>
+                                    <a th:href="@{/admin/productos/delete/{id} (id=${p.id}) }" th:onclick="return confirm('¿Estas seguro?')" class="boton-admin" role="button" title="Eliminar el registro."><i class="fa-solid fa-trash-can"></i></a>
+                                </td>
                             </tr> 
                         </tbody>
                     </table>
