--- a/TFC/src/main/resources/templates/admin/adminUsuarios.html
+++ b/TFC/src/main/resources/templates/admin/adminUsuarios.html
@@ -24,7 +24,7 @@
     			<ul class="col-2 d-flex" th:insert="fragments/adminNav"></ul>
     			<!-- ======================================= -->
                 <div class="col-10">
-                    <h1 class="text-center">Productos</h1>
+                    <h1 class="text-center">USUARIOS</h1>
                     <table>
                         <thead>
                             <tr>
